# IRwZM

./: pyproject.toml
Lab2/: dataset.py  zajecie2main.ipynb
Lab3/: variant_13_infectious.csv  zajecie3main.ipynb
Lab4/: Zajecie4_interpretowalnosc.ipynb  data_ready_for_system.csv  main.py  model_predictions_output.csv  zajecie4main.ipynb
Lab5/: Zajecie5.ipynb  Zajecie5_bezpieczenstwo.ipynb  audit_log.txt  dane_medyczne.csv  dane_medyczne_zmienione.csv  main.py  secret.key
Lab6/: Zajecie6_expert.ipynb  dane_pacjentow.csv  zajecie6main.ipynb
Lab7/: app.py  config.json  health_measurements.csv  risk_model.joblib
Lab8/: zajecie8main.ipynb
Lab9/: zajecie9main.ipynb
