[project]
name = "irwzm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fernet>=1.0.1",
    "ipykernel>=7.2.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "spacy>=3.8.14",
    "streamlit>=1.58.0",
    "tensorflow>=2.21.0",
    "uuid>=1.30",
]
